--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-dsfojdshf
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Hello world</title>
+</head>
+<body>
+    안녕하세요 감사해요 잘 있어요 다시만나요
+</body>
+</html>
