--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello world</title>
+    <style>
+        div{
+            width: 500px;
+            height: 500px;
+            margin: 0 auto;
+            background-color: green;
+        }
+    </style>
 </head>
 <body>
-    안녕하세요 감사해요 잘 있어요 다시만나요
+    <div>안녕 난 호스팅 될래요 ~ </div>
 </body>
 </html>
